k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: temp-converter-grpc
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: frontend
          image: us-central1-docker.pkg.dev/verteilte-systeme-487315/temp-converter-grpc/frontend:latest
          ports:
            - containerPort: 80
              protocol: TCP
          env:
            - name: ENVOY_URL
              value: "http://envoy.temp-converter-grpc.svc.cluster.local:8080"
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
