k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temp-converter-grpc-ingress
  namespace: temp-converter-grpc
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          # All traffic goes to Frontend (nginx)
          # nginx internally proxies /temperature.TemperatureConverter/ to Envoy
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
